--- a/translations/kangyur/translations/049-004_toh109-the_sutra_on_the_mountain_gayasirsa.xml
+++ b/translations/kangyur/translations/049-004_toh109-the_sutra_on_the_mountain_gayasirsa.xml
@@ -42,7 +42,7 @@
                                         Lindsay</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.4 <date>2023</date>
+                <edition>v 1.0.5 <date>2023</date>
                 </edition>
             </editionStmt>
                         <publicationStmt status="1.a">
@@ -84,7 +84,7 @@
                                 </bibl>
                         </sourceDesc>
                         <notesStmt>
-                                <note type="lastUpdated" date-time="2023-04-17T12:06:32.651Z" user="admin">17/04/2023 12:06:32</note>
+                                <note type="lastUpdated" date-time="2023-04-18T17:22:34.551Z" user="admin">18/04/2023 17:22:34</note>
                                 <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-10-08T07:42:51.906Z" user="andreas">v
                                         0.1.0</note>
                                 <note type="updated" update="translation-status" value="2.f" date-time="2020-01-27T13:10:59.245Z" user="mike">2.f</note>
@@ -134,6 +134,7 @@
                             <note type="updated" update="text-version" value="1.0.2" date-time="2023-04-14T21:14:25.982Z" user="konchog">Several minor fixes in notes.</note>
                             <note type="updated" update="text-version" value="1.0.3" date-time="2023-04-17T12:00:42.285Z" user="martina-cotter">updated notes.</note>
                             <note type="updated" update="text-version" value="1.0.4" date-time="2023-04-17T12:06:29.797Z" user="martina-cotter">Updated note.</note>
+                            <note type="updated" update="text-version" value="1.0.5" date-time="2023-04-18T17:22:31.694Z" user="martina-cotter">Adding new note for linking translation plus bib entry.</note>
                         </notesStmt>
                 </fileDesc>
         </teiHeader>
@@ -340,7 +341,10 @@
                                                 Other sūtras in the Kangyur of which the setting is
                                                   <title xml:lang="en">Gayāśīrṣa Hill</title>
                                                 include the celebrated <title xml:lang="en">Jewel
-                                                  Cloud</title> (Toh 230)<ref rend="pending" target="http://read.84000.co/translation/toh230.html"/> and <title xml:lang="en">Victory of the Ultimate
+                                                        Cloud</title> (Toh 231)<note place="end" xml:id="UT22084-049-004-440">See Dharmachakra Translation Committee, trans., <title xml:lang="en">
+                                <ref target="https://read.84000.co/translation/toh231.html">The Jewel Cloud</ref>
+                            </title>, Toh
+                                                                231 (2019).</note> and <title xml:lang="en">Victory of the Ultimate
                                                   Dharma</title> (Toh 246).<note place="end" xml:id="UT22084-049-004-435">See UCSB Buddhist
                                                   Studies Translation Group–2, trans., <title xml:lang="en">
                                 <ref target="https://read.84000.co/translation/toh246.html">Victory of the Ultimate Dharma</ref>
@@ -1573,6 +1577,11 @@
                                 </div>
                                 <div type="section" xml:id="UT22084-049-004-listBibl-5">
                                         <head type="section" tid="131">Secondary Literature</head>
+                                        <bibl xml:id="UT22084-049-004-441">Dharmachakra Translation Committee, trans. <title xml:lang="en">
+                                                <ref target="https://read.84000.co/translation/toh231.html">The Jewel Cloud</ref>
+                                        </title> (<title xml:lang="Sa-Ltn">Ārya­ratna­megha­nāma­mahāyāna­sūtra</title>, Toh 231).
+                                                84000: Translating the Words of the Buddha,
+                                                2019.</bibl>
                                         <bibl xml:id="UT22084-049-004-162">Edgerton, Franklin.
                                                   <title xml:lang="en">Buddhist Hybrid Sanskrit
                                                   Grammar and Dictionary</title>. 2 vols. New Haven:
