--- a/translations/kangyur/placeholders/014-001_toh8-1-chapters_1_to_13_the_perfection_of_wisdom_in_one_hundred_thousand_lines.xml
+++ b/translations/kangyur/placeholders/014-001_toh8-1-chapters_1_to_13_the_perfection_of_wisdom_in_one_hundred_thousand_lines.xml
@@ -17,10 +17,10 @@
                 <editor role="projectEditor" ref="eft:person-289">Nathaniel Rich</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.12 <date>2021</date>
+                <edition>v 0.0.13 <date>2021</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.g">
+            <publicationStmt status="2.f">
                 <idno xml:id="UT22084-014-001"/>
                 <date/>
             </publicationStmt>
@@ -39,7 +39,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-02-28T16:34:11.863Z" user="admin">28/02/2023 16:34:11</note>
+                <note type="lastUpdated" date-time="2023-04-19T07:11:49.936Z" user="admin">19/04/2023 07:11:49</note>
                 <note type="updated" update="translation-status" value="3" date-time="2021-02-23T18:52:39.151Z" user="john">3</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-02-23T18:52:39.151Z" user="john">Split from original single Toh 8 file</note>
                 <note type="updated" update="text-version" value="0.0.3" date-time="2021-02-23T18:54:30.339Z" user="john">Auto (update-contributors)</note>
@@ -54,6 +54,8 @@
                 <note type="updated" update="text-version" value="0.0.10" date-time="2023-01-17T10:54:52.817Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="text-version" value="0.0.11" date-time="2023-02-28T16:32:39.391Z" user="john">Auto (update-locations)</note>
                 <note type="updated" update="text-version" value="0.0.12" date-time="2023-02-28T16:34:07.497Z" user="john">Auto (update-locations)</note>
+                <note type="updated" update="translation-status" value="2.f" date-time="2023-04-19T07:11:45.719Z" user="line-tofte">2.f</note>
+                <note type="updated" update="text-version" value="0.0.13" date-time="2023-04-19T07:11:45.719Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
