--- a/translations/kangyur/translations/046-002_toh96-the_play_of_manjusri_sutra.xml
+++ b/translations/kangyur/translations/046-002_toh96-the_play_of_manjusri_sutra.xml
@@ -31,7 +31,7 @@
                 <consultant role="projectManager" ref="contributors.xml#person-195">Jens Braarvig</consultant>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.3.16 <date>2021</date>
+                <edition>v 1.3.17 <date>2023</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -68,7 +68,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-01-18T15:33:51.686Z" user="celso">18/01/2023 15:33:51</note>
+                <note type="lastUpdated" date-time="2023-04-19T12:33:41.091Z" user="admin">19/04/2023 12:33:41</note>
                 <note type="updated" update="text-version" value="0.1" date-time="2019-09-26T22:29:18.147Z" user="james"/>
                 <note type="updated" update="translation-status" value="2.a" date-time="2019-09-26T22:29:18.147Z" user="james">2.a</note>
                 <note type="updated" update="text-version" value="0.2" date-time="2019-09-27T12:08:43.224Z" user="mike">Testing out new version
@@ -103,7 +103,7 @@
     <note type="updated" update="text-version" value="1.3.10" date-time="2021-03-12T18:27:43.558Z" user="celso">Non-breaking spaces before dandas</note>
     <note type="updated" update="text-version" value="1.3.11" date-time="2021-03-12T18:30:07.117Z" user="celso">reset blank pdfs</note>
     <note type="updated" update="text-version" value="1.3.12" date-time="2021-04-21T22:11:15.407Z" user="celso">added @xml:lang tag to  a few Chinese strings that were missing it</note>
-    <note type="updated" update="text-version" value="1.3.13" date-time="2021-07-29T02:51:02.135Z" user="celso">kiṃnara to kinnara</note>    <note type="updated" update="text-version" value="1.3.14" date-time="2022-06-27T10:06:48.1Z" user="admin">Auto (script-increment-version-published)</note>    <note type="updated" update="text-version" value="1.3.15" date-time="2023-01-16T16:58:52.361Z" user="celso">Auto (script-increment-version-published)</note>    <note type="updated" update="text-version" value="1.3.16" date-time="2023-01-18T14:48:43.396Z" user="celso">Auto (removing-tid-from-back-list-items)</note>
+    <note type="updated" update="text-version" value="1.3.13" date-time="2021-07-29T02:51:02.135Z" user="celso">kiṃnara to kinnara</note>    <note type="updated" update="text-version" value="1.3.14" date-time="2022-06-27T10:06:48.1Z" user="admin">Auto (script-increment-version-published)</note>    <note type="updated" update="text-version" value="1.3.15" date-time="2023-01-16T16:58:52.361Z" user="celso">Auto (script-increment-version-published)</note>    <note type="updated" update="text-version" value="1.3.16" date-time="2023-01-18T14:48:43.396Z" user="celso">Auto (removing-tid-from-back-list-items)</note>    <note type="updated" update="text-version" value="1.3.17" date-time="2023-04-19T12:33:38.231Z" user="celso">Corrected @type values for Skt. attestation to match the new code in the schema.</note>
             </notesStmt>
         </fileDesc>
         <!--<profileDesc>
@@ -2708,7 +2708,7 @@
                             <term>Suvarṇottama­prabhāśrī</term>
                             <term xml:lang="Bo-Ltn">gser mchog ’od dpal </term>
                             <term xml:lang="bo">གསེར་མཆོག་འོད་དཔལ།</term>
-                            <term xml:lang="Sa-Ltn" type="semanticReconstruction">Suvarṇottama­prabhāśrī</term>
+                            <term xml:lang="Sa-Ltn" type="reconstructedSemantic">Suvarṇottama­prabhāśrī</term>
                             <term type="definition">A courtesan’s daughter, central figure 
                                 of <title xml:lang="en">The Miraculous Play of Mañjuśrī</title>
                                 sūtra. Her name means “Glorious Light of Supreme Gold.” The 
