--- a/translations/kangyur/placeholders/066-009_toh251-the_sutra_on_four_precepts.xml
+++ b/translations/kangyur/placeholders/066-009_toh251-the_sutra_on_four_precepts.xml
@@ -14,12 +14,13 @@
                 <editor role="projectEditor" ref="eft:person-411">David Fiordalis</editor>
                 <editor role="copyEditor" ref="eft:person-433">Dawn Collins</editor>
                 <editor role="projectEditor" ref="eft:person-50">Andreas Doctor</editor>
+                <editor role="projectEditor" ref="eft:person-250">Rory Lindsay</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.13 <date>2021</date>
+                <edition>v 0.0.15 <date>2021</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.b">
+            <publicationStmt status="2.a">
                 <idno xml:id="UT22084-066-009"/>
                 <date/>
             </publicationStmt>
@@ -35,7 +36,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-05-31T10:06:23.22Z" user="admin">31/05/2023 10:06:23</note>
+                <note type="lastUpdated" date-time="2023-06-01T12:17:36.05Z" user="admin">01/06/2023 12:17:36</note>
                 <note type="updated" update="translation-status" value="3" date-time="2021-02-08T07:58:40.091Z" user="line-tofte">3</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2021-02-08T07:58:40.091Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-02-08T07:59:06.674Z" user="line-tofte">Auto (update-contributors)</note>
@@ -57,6 +58,9 @@
                 <note type="updated" update="text-version" value="0.0.12" date-time="2023-05-25T07:41:27.118Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="translation-status" value="2.b" date-time="2023-05-31T10:06:18.916Z" user="line-tofte">2.b</note>
                 <note type="updated" update="text-version" value="0.0.13" date-time="2023-05-31T10:06:18.916Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.14" date-time="2023-05-31T10:06:48.666Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.a" date-time="2023-06-01T12:17:31.729Z" user="line-tofte">2.a</note>
+                <note type="updated" update="text-version" value="0.0.15" date-time="2023-06-01T12:17:31.729Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
