--- a/translations/tengyur/placeholders/113-010_toh3990-aryacaturdharmakavyakhyana.xml
+++ b/translations/tengyur/placeholders/113-010_toh3990-aryacaturdharmakavyakhyana.xml
@@ -12,12 +12,13 @@
                 <editor role="projectEditor" ref="eft:person-411">David Fiordalis</editor>
                 <editor role="copyEditor" ref="eft:person-433">Dawn Collins</editor>
                 <editor role="projectEditor" ref="eft:person-50">Andreas Doctor</editor>
+                <editor role="projectEditor" ref="eft:person-250">Rory Lindsay</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.15 <date>2022</date>
+                <edition>v 0.0.17 <date>2022</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.b">
+            <publicationStmt status="2.a">
                 <idno xml:id="UT23703-113-010"/>
                 <date/>
             </publicationStmt>
@@ -34,7 +35,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-05-31T10:04:56.971Z" user="admin">31/05/2023 10:04:56</note>
+                <note type="lastUpdated" date-time="2023-06-01T12:18:45.546Z" user="admin">01/06/2023 12:18:45</note>
                 <note type="updated" update="translation-status" value="4" date-time="2022-01-28T08:36:55.219Z" user="line-tofte">4</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2022-01-28T08:36:55.219Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="import" value="fileDesc" import="tengyur-data-3981-4019_PH_new_v2.4.xml" date-time="2022-01-28T10:32:05.149Z" user="admin"/>
@@ -61,6 +62,9 @@
                 <note type="updated" update="text-version" value="0.0.14" date-time="2023-05-25T07:42:56.176Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="translation-status" value="2.b" date-time="2023-05-31T10:04:52.614Z" user="line-tofte">2.b</note>
                 <note type="updated" update="text-version" value="0.0.15" date-time="2023-05-31T10:04:52.614Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.16" date-time="2023-05-31T10:05:27.451Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.a" date-time="2023-06-01T12:18:41.217Z" user="line-tofte">2.a</note>
+                <note type="updated" update="text-version" value="0.0.17" date-time="2023-06-01T12:18:41.217Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
