--- a/translations/kangyur/placeholders/072-029_toh329-the_sutra_of_the_god.xml
+++ b/translations/kangyur/placeholders/072-029_toh329-the_sutra_of_the_god.xml
@@ -13,13 +13,14 @@
                 <author role="translatorEng" ref="eft:person-175">Rev. Dr. Ani Kunga Chodron</author>
                 <consultant role="projectManager" ref="eft:person-175">Rev. Dr. Ani Kunga Chodron</consultant>
                 <editor role="associateEditor" ref="eft:person-422">George FitzHerbert</editor>
+                <editor role="copyEditor" ref="eft:person-433">Dawn Collins</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.7 <date>2019</date>
+                <edition>v 0.0.9 <date>2019</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="2.e">
+            <publicationStmt status="2.d">
                 <idno xml:id="UT22084-072-029"/>
                 <date/>
             </publicationStmt>
@@ -35,7 +36,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-05-02T14:29:04.708Z" user="admin">02/05/2023 14:29:04</note>
+                <note type="lastUpdated" date-time="2023-06-01T13:09:24.257Z" user="admin">01/06/2023 13:09:24</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2022-11-30T13:37:06.887Z" user="line-tofte">2.h</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2022-11-30T13:37:06.887Z" user="line-tofte">Auto (update-publication-status)</note>
@@ -47,6 +48,9 @@
                 <note type="updated" update="text-version" value="0.0.6" date-time="2023-03-21T10:27:59.595Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="translation-status" value="2.e" date-time="2023-05-02T14:29:00.372Z" user="line-tofte">2.e</note>
                 <note type="updated" update="text-version" value="0.0.7" date-time="2023-05-02T14:29:00.372Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.8" date-time="2023-05-02T14:29:34.375Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.d" date-time="2023-06-01T13:09:19.928Z" user="line-tofte">2.d</note>
+                <note type="updated" update="text-version" value="0.0.9" date-time="2023-06-01T13:09:19.928Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
