--- a/translations/kangyur/placeholders/034-025_toh37-sutra_on_the_benefits_of_the_five_precepts.xml
+++ b/translations/kangyur/placeholders/034-025_toh37-sutra_on_the_benefits_of_the_five_precepts.xml
@@ -4,19 +4,20 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">bslab pa lnga'i phan yon gyi mdo/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">pañcaśikṣānusaṃsasūtra</title>
                 <title type="mainTitle" xml:lang="en">Sūtra on the Benefits of the Five Precepts</title>
-                <author role="translatorMain" ref="contributors.xml#team-53"/>
-                <consultant role="projectManager" ref="contributors.xml#person-23">Bruno Galasek-Hul</consultant>
-                <author role="translatorEng" ref="contributors.xml#person-23">Bruno Galasek-Hul</author>
-                <editor role="reviser" ref="contributors.xml#person-343">Prof. Stephen Jenkins</editor>
+                <title type="mainTitle" xml:lang="Sa-Ltn">pañcaśikṣānusaṃsasūtra</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">bslab pa lnga'i phan yon gyi mdo/</title>
+                <author role="translatorMain" ref="eft:team-53"/>
+                <consultant role="projectManager" ref="eft:person-23">Bruno Galasek-Hul</consultant>
+                <author role="translatorEng" ref="eft:person-23">Bruno Galasek-Hul</author>
+                <editor role="reviser" ref="eft:person-343">Stephen Jenkins</editor>
+                <editor role="associateEditor" ref="eft:person-422">George FitzHerbert</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.6 <date>2020</date>
+                <edition>v 0.0.8 <date>2020</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.g">
+            <publicationStmt status="2.f">
                 <idno xml:id="UT22084-034-025"/>
                 <date/>
             </publicationStmt>
@@ -32,12 +33,19 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-05-30T13:07:33.428Z" user="admin">30/05/2023 13:07:33</note>
-    <note type="updated" update="translation-status" value="3" date-time="2020-10-09T14:15:24.786Z" user="line-tofte">3</note>
-    <note type="updated" update="text-version" value="0.0.1" date-time="2020-10-09T14:15:24.786Z" user="line-tofte">0.0.1</note>
-    <note type="updated" update="text-version" value="0.0.2" date-time="2020-10-09T14:18:48.286Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="text-version" value="0.0.3" date-time="2020-10-09T14:20:29.626Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="text-version" value="0.0.4" date-time="2020-10-09T14:31:27.468Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.h" date-time="2022-04-25T09:04:14.241Z" user="line-tofte">2.h</note>    <note type="updated" update="text-version" value="0.0.5" date-time="2022-04-25T09:04:14.241Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="2.g" date-time="2023-05-30T13:07:29.076Z" user="line-tofte">2.g</note>    <note type="updated" update="text-version" value="0.0.6" date-time="2023-05-30T13:07:29.076Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="lastUpdated" date-time="2023-06-07T07:47:58.1Z" user="admin">07/06/2023 07:47:58</note>
+                <note type="updated" update="translation-status" value="3" date-time="2020-10-09T14:15:24.786Z" user="line-tofte">3</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2020-10-09T14:15:24.786Z" user="line-tofte">0.0.1</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2020-10-09T14:18:48.286Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2020-10-09T14:20:29.626Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.0.4" date-time="2020-10-09T14:31:27.468Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.h" date-time="2022-04-25T09:04:14.241Z" user="line-tofte">2.h</note>
+                <note type="updated" update="text-version" value="0.0.5" date-time="2022-04-25T09:04:14.241Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.g" date-time="2023-05-30T13:07:29.076Z" user="line-tofte">2.g</note>
+                <note type="updated" update="text-version" value="0.0.6" date-time="2023-05-30T13:07:29.076Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.7" date-time="2023-05-30T13:08:04.733Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.f" date-time="2023-06-07T07:47:53.827Z" user="line-tofte">2.f</note>
+                <note type="updated" update="text-version" value="0.0.8" date-time="2023-06-07T07:47:53.827Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
