--- a/translations/kangyur/placeholders/090-024_toh580,936-the_incantation_that_captures_the_six_perfections.xml
+++ b/translations/kangyur/placeholders/090-024_toh580,936-the_incantation_that_captures_the_six_perfections.xml
@@ -14,10 +14,10 @@
                 <author role="translatorEng" ref="eft:person-7">Paul Hackett</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2022</date>
+                <edition>v 0.0.3 <date>2022</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="3">
+            <publicationStmt status="2.h">
                 <idno xml:id="UT22084-090-024"/>
                 <date/>
             </publicationStmt>
@@ -42,10 +42,12 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-12-16T10:20:04.346Z" user="admin">16/12/2022 10:20:04</note>
+                <note type="lastUpdated" date-time="2023-06-19T14:04:43.254Z" user="admin">19/06/2023 14:04:43</note>
                 <note type="updated" update="translation-status" value="3" date-time="2022-12-16T10:19:16.659Z" user="line-tofte">3</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-16T10:19:16.659Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2022-12-16T10:19:58.643Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.h" date-time="2023-06-19T14:04:39.003Z" user="line-tofte">2.h</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2023-06-19T14:04:39.003Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
