--- a/translations/kangyur/placeholders/090-025_toh581,937-the_incantation_that_gains_the_ten_perfections.xml
+++ b/translations/kangyur/placeholders/090-025_toh581,937-the_incantation_that_gains_the_ten_perfections.xml
@@ -13,10 +13,10 @@
                 <author role="translatorEng" ref="eft:person-7">Paul Hackett</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2022</date>
+                <edition>v 0.0.3 <date>2022</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="3">
+            <publicationStmt status="2.h">
                 <idno xml:id="UT22084-090-025"/>
                 <date/>
             </publicationStmt>
@@ -41,10 +41,12 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-12-16T10:21:20.27Z" user="admin">16/12/2022 10:21:20</note>
+                <note type="lastUpdated" date-time="2023-06-19T14:05:54.212Z" user="admin">19/06/2023 14:05:54</note>
                 <note type="updated" update="translation-status" value="3" date-time="2022-12-16T10:20:43.116Z" user="line-tofte">3</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-16T10:20:43.116Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2022-12-16T10:21:14.567Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.h" date-time="2023-06-19T14:05:49.858Z" user="line-tofte">2.h</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2023-06-19T14:05:49.858Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
