--- a/translations/kangyur/placeholders/090-027_toh583,939-the_incantation_that_captures_the_perfection_of_wisdom_in_one_hundred_thousand_lines.xml
+++ b/translations/kangyur/placeholders/090-027_toh583,939-the_incantation_that_captures_the_perfection_of_wisdom_in_one_hundred_thousand_lines.xml
@@ -15,10 +15,10 @@
                 <author role="translatorEng" ref="eft:person-7">Paul Hackett</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2022</date>
+                <edition>v 0.0.3 <date>2022</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="3">
+            <publicationStmt status="2.h">
                 <idno xml:id="UT22084-090-027"/>
                 <date/>
             </publicationStmt>
@@ -43,10 +43,12 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-12-16T10:22:38.132Z" user="admin">16/12/2022 10:22:38</note>
+                <note type="lastUpdated" date-time="2023-06-19T14:06:46.886Z" user="admin">19/06/2023 14:06:46</note>
                 <note type="updated" update="translation-status" value="3" date-time="2022-12-16T10:22:03.166Z" user="line-tofte">3</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-16T10:22:03.166Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2022-12-16T10:22:32.423Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.h" date-time="2023-06-19T14:06:42.62Z" user="line-tofte">2.h</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2023-06-19T14:06:42.62Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
